<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>


    <groupId>automenta</groupId>
    <artifactId>narchy</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <name>narchy</name>
    <url>http://github.com/automenta/narchy</url>

    <prerequisites>
        <maven>3.6</maven>
    </prerequisites>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>util</module>
        <module>ui</module>
        <module>logic</module>
        <module>nal</module>
        <module>gp</module>
        <module>lab</module>
        <module>app</module>
        <module>os</module>
        <module>test</module>
    </modules>

    <repositories>
        <repository>
            <id>jcenter</id>
            <url>http://jcenter.bintray.com</url>
        </repository>
        <repository>
            <id>jenkins-ci</id>
            <url>http://repo.jenkins-ci.org/releases</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <skipTests>true</skipTests>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>12</release>
                    <target>12</target>
                    <useIncrementalCompilation>true</useIncrementalCompilation>
                </configuration>
            </plugin>


            <!-- This is just to make sure the class is set as main class to execute from the jar-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <!--                            <minimizeJar>true</minimizeJar>-->
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <include>META-INF/BenchmarkList</include>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <!--                                    <mainClass>com.stackoverflow.nullpointer.expression.SwitchExpressions</mainClass>-->
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>



<!--            &lt;!&ndash; https://github.com/STAMP-project/pitmp-maven-plugin&ndash;&gt;-->
<!--            &lt;!&ndash;            usage: mvn eu.stamp-project:pitmp-maven-plugin:run&ndash;&gt;-->
<!--            <plugin>-->
<!--                <groupId>eu.stamp-project</groupId>-->
<!--                <artifactId>pitmp-maven-plugin</artifactId>-->
<!--                <version>1.3.6</version>-->
<!--                <configuration>-->

<!--                    &lt;!&ndash;                    <mutationEngine>descartes</mutationEngine>&ndash;&gt;-->
<!--                    &lt;!&ndash;                    <mutationEngine>gregor</mutationEngine>&ndash;&gt;-->


<!--&lt;!&ndash;                    <useSlf4j>true</useSlf4j>&ndash;&gt;-->
<!--&lt;!&ndash;                    <useClasspathJar>true</useClasspathJar>&ndash;&gt;-->

<!--                    <targetModules>-->
<!--                        <param>util</param>-->
<!--                        &lt;!&ndash;                        <param>logic</param>&ndash;&gt;-->
<!--                        &lt;!&ndash;                        <param>nal</param>&ndash;&gt;-->
<!--                    </targetModules>-->

<!--                    <withHistory>true</withHistory>-->
<!--                    <exportLineCoverage>true</exportLineCoverage>-->

<!--                    <testPlugin>junit5</testPlugin>-->
<!--&lt;!&ndash;                    <jvmArgs>-Xmx512m</jvmArgs>&ndash;&gt;-->
<!--                    <targetClasses>-->
<!--                        <param>jcog.*</param>-->
<!--                        &lt;!&ndash;                        <param>jcog.pri*</param>&ndash;&gt;-->
<!--                        &lt;!&ndash;                        <param>nars*</param>&ndash;&gt;-->
<!--                    </targetClasses>-->
<!--                    <targetTests>-->
<!--                        <param>jcog.*</param>-->
<!--                    </targetTests>-->
<!--                    <verbose>true</verbose>-->
<!--                </configuration>-->
<!--                <dependencies>-->
<!--&lt;!&ndash;                    <dependency>&ndash;&gt;-->
<!--&lt;!&ndash;                        <groupId>org.pitest</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;                        <artifactId>pitest-maven</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;                        <version>1.4.7</version>&ndash;&gt;-->
<!--&lt;!&ndash;                    </dependency>&ndash;&gt;-->
<!--&lt;!&ndash;                    <dependency>&ndash;&gt;-->
<!--&lt;!&ndash;                        <groupId>org.pitest</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;                        <artifactId>pitest-entry</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;                        <version>1.4.7</version>&ndash;&gt;-->
<!--&lt;!&ndash;                    </dependency>&ndash;&gt;-->
<!--                    <dependency>-->
<!--                        <groupId>org.pitest</groupId>-->
<!--                        <artifactId>pitest-junit5-plugin</artifactId>-->
<!--                        <version>0.8</version>-->
<!--                    </dependency>-->
<!--                </dependencies>-->
<!--            </plugin>-->


        </plugins>
    </build>
</project>
